--- a/src/main/resources/edu/wpi/first/pathweaver/welcomeScreen.fxml
+++ b/src/main/resources/edu/wpi/first/pathweaver/welcomeScreen.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.first.pathweaver.WelcomeController">
+<BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.wpi.first.pathweaver.WelcomeController">
    <opaqueInsets>
       <Insets />
    </opaqueInsets>
@@ -33,14 +33,14 @@
                   <ListView fx:id="projects" />
                </content>
             </TitledPane>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+            <HBox alignment="CENTER" spacing="10.0">
                <children>
                   <Button fx:id="createProject" mnemonicParsing="false" onAction="#createProject" text="Create Project" />
                   <Button fx:id="importProject" mnemonicParsing="false" onAction="#importProject" text="Import Project" />
                </children>
             </HBox>
-            <Button fx:id="help" mnemonicParsing="false" onAction="#help" text="Help" />
-            <Button fx:id="darkToggle" mnemonicParsing="false" onAction="#darkToggle" text="Toggle DarkMode" />
+            <Button fx:id="help" mnemonicParsing="false" onAction="#help" text="💀💀💀💀" />
+            <Button fx:id="darkToggle" mnemonicParsing="false" onAction="#darkToggle" text="Dark Mode" />
          </children>
          <BorderPane.margin>
             <Insets bottom="20.0" left="10.0" right="10.0" top="10.0" />
