--- a/src/main/resources/edu/wpi/first/talontrack/createProject.fxml
+++ b/src/main/resources/edu/wpi/first/talontrack/createProject.fxml
@@ -40,46 +40,50 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <padding>
                   <Insets bottom="20.0" left="40.0" right="40.0" top="10.0" />
                </padding>
+               <Label fx:id="outputLabel" text="Output Directory" GridPane.rowIndex="1" />
+               <Label fx:id="commandLabel" text="Command Directory" GridPane.rowIndex="2" />
+               <Label text="Game" GridPane.rowIndex="3" />
+               <Label text="Length Unit" GridPane.rowIndex="4" />
+               <Label text="Export Unit" GridPane.rowIndex="5" />
                <Label fx:id="browseLabel" text="Project Directory" />
-               <Label fx:id="velocityLabel" text="Max Velocity" GridPane.rowIndex="5" />
-               <Label fx:id="accelerationLabel" text="Max Acceleration" GridPane.rowIndex="6" />
-               <Label fx:id="trackWidthLabel" text="Track Width" GridPane.rowIndex="7" />
-               <Label fx:id="wheelBaseLabel" text="Wheel Base" GridPane.rowIndex="8" />
-               <Label fx:id="bumperWidthLabel" text="Bumper Width" GridPane.rowIndex="9" />
-               <Label fx:id="bumperLengthLabel" text="Bumper Length" GridPane.rowIndex="10" />
+               <Label fx:id="velocityLabel" text="Max Velocity" GridPane.rowIndex="6" />
+               <Label fx:id="accelerationLabel" text="Max Acceleration" GridPane.rowIndex="7" />
+               <Label fx:id="trackWidthLabel" text="Track Width" GridPane.rowIndex="8" />
+               <Label fx:id="wheelBaseLabel" text="Wheel Base" GridPane.rowIndex="9" />
+               <Label fx:id="bumperWidthLabel" text="Bumper Width" GridPane.rowIndex="10" />
+               <Label fx:id="bumperLengthLabel" text="Bumper Length" GridPane.rowIndex="11" />
                <TextField fx:id="directory" GridPane.columnIndex="1" />
                <Button fx:id="browse" mnemonicParsing="false" onAction="#browseDirectory" text="Browse" GridPane.columnIndex="2" />
                <TextField fx:id="outputDirectory" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                <Button fx:id="browseOutput" mnemonicParsing="false" onAction="#browseOutput" text="Browse" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-               <ChoiceBox fx:id="game" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-               <ChoiceBox fx:id="length" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-               <ChoiceBox fx:id="export" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-               <TextField fx:id="maxVelocity" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-               <TextField fx:id="maxAcceleration" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-               <TextField fx:id="trackWidth" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-               <TextField fx:id="wheelBase" GridPane.columnIndex="1" GridPane.rowIndex="8" />
-               <TextField fx:id="bumperWidth" GridPane.columnIndex="1" GridPane.rowIndex="9" />
-               <TextField fx:id="bumperLength" GridPane.columnIndex="1" GridPane.rowIndex="10" />
-               <Label fx:id="velocityUnits" GridPane.columnIndex="2" GridPane.rowIndex="5" />
-               <Label fx:id="accelerationUnits" GridPane.columnIndex="2" GridPane.rowIndex="6" />
-               <Label fx:id="trackWidthUnits" GridPane.columnIndex="2" GridPane.rowIndex="7" />
-               <Label fx:id="wheelBaseUnits" GridPane.columnIndex="2" GridPane.rowIndex="8" />
-               <Label fx:id="bumperWidthUnits" GridPane.columnIndex="2" GridPane.rowIndex="9" />
-               <Label fx:id="bumperLengthUnits" GridPane.columnIndex="2" GridPane.rowIndex="10" />
-               <ButtonBar GridPane.columnIndex="2" GridPane.rowIndex="11">
+               <TextField fx:id="commandDirectory" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+               <Button fx:id="browseCommand" mnemonicParsing="false" onAction="#browseCommand" text="Browse" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+               <ChoiceBox fx:id="game" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+               <ChoiceBox fx:id="length" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+               <ChoiceBox fx:id="export" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+               <TextField fx:id="maxVelocity" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+               <TextField fx:id="maxAcceleration" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+               <TextField fx:id="trackWidth" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+               <TextField fx:id="wheelBase" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+               <TextField fx:id="bumperWidth" GridPane.columnIndex="1" GridPane.rowIndex="10" />
+               <TextField fx:id="bumperLength" GridPane.columnIndex="1" GridPane.rowIndex="11" />
+               <Label fx:id="velocityUnits" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+               <Label fx:id="accelerationUnits" GridPane.columnIndex="2" GridPane.rowIndex="7" />
+               <Label fx:id="trackWidthUnits" GridPane.columnIndex="2" GridPane.rowIndex="8" />
+               <Label fx:id="wheelBaseUnits" GridPane.columnIndex="2" GridPane.rowIndex="9" />
+               <Label fx:id="bumperWidthUnits" GridPane.columnIndex="2" GridPane.rowIndex="10" />
+               <Label fx:id="bumperLengthUnits" GridPane.columnIndex="2" GridPane.rowIndex="11" />
+               <ButtonBar GridPane.columnIndex="2" GridPane.rowIndex="12">
                   <buttons>
                      <Button fx:id="cancel" mnemonicParsing="false" onAction="#cancel" text="Cancel" />
                      <Button fx:id="create" mnemonicParsing="false" onAction="#createProject" text="Create Project" />
                   </buttons>
                </ButtonBar>
-               <Label text="Game" GridPane.rowIndex="2" />
-               <Label text="Length Unit" GridPane.rowIndex="3" />
-               <Label text="Export Unit" GridPane.rowIndex="4" />
-               <Label fx:id="outputLabel" text="Output Directory" GridPane.rowIndex="1" />
             </GridPane>
          </children>
       </VBox>
