--- a/src/main/resources/edu/wpi/first/talontrack/editCommand.fxml
+++ b/src/main/resources/edu/wpi/first/talontrack/editCommand.fxml
@@ -26,8 +26,8 @@
     <BorderPane.margin>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
     </BorderPane.margin>
-    <Label text="Start Time" fx:id="lStart" />
-    <Label text="Finish Time" GridPane.rowIndex="1" fx:id="lFinish" />
+    <Label text="Start Time (Cyan)" fx:id="lStart" />
+    <Label text="Finish Time (Blue)" GridPane.rowIndex="1" fx:id="lFinish" />
     <Label text="P1" GridPane.columnIndex="2" fx:id="l1" />
     <Label text="P2" GridPane.columnIndex="2" GridPane.rowIndex="1" fx:id="l2" />
     <Label text="Name" GridPane.rowIndex="2" fx:id="lName" />
