--- a/src/main/resources/edu/wpi/first/talontrack/fieldDisplay.fxml
+++ b/src/main/resources/edu/wpi/first/talontrack/fieldDisplay.fxml
@@ -8,6 +8,7 @@
         <ImageView fx:id="backgroundImage" preserveRatio="true" />
         <Pane fx:id="drawPane">
             <Group fx:id="pathGroup" />
+            <Group fx:id="instGroup" />
         </Pane>
     </Group>
 </Pane>
