--- a/src/main/resources/edu/wpi/first/talontrack/welcomeScreen.fxml
+++ b/src/main/resources/edu/wpi/first/talontrack/welcomeScreen.fxml
@@ -17,7 +17,7 @@
    <center>
       <VBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
          <children>
-            <Label text="TalonTrack">
+            <Label text="TalonTrack - Swerve">
                <font>
                   <Font size="40.0" />
                </font>
